--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,4 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: methods, graphics
+URL: https://isaiahbenny.github.io/sparsevector/
